[gd_scene load_steps=2 format=3 uid="uid://draftcard123"]

[ext_resource type="Script" path="res://scripts/ui/components/DraftCard.gd" id="1_script"]

[node name="DraftCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 200)
offset_right = 150.0
offset_bottom = 200.0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Building Name"
horizontal_alignment = 1

[node name="IconRect" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="CostLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cost: 100"

[node name="ProductionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Prod: 1.0/s"

[node name="BuyButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
